[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/world/Crate.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/world/assets/terrainTiles_retina.png" type="Texture" id=3]
[ext_resource path="res://scenes/world/Tree.tscn" type="PackedScene" id=4]
[ext_resource path="res://soundtrack.mp3" type="AudioStream" id=5]
[ext_resource path="res://scenes/world/World.gd" type="Script" id=6]
[ext_resource path="res://scenes/enemy/TankPath.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/enemy/Enemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/world/SmallTree.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/enemy/ShootingEnabler.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/ui/GUI.tscn" type="PackedScene" id=11]

[sub_resource type="TileSet" id=1]
0/name = "terrainTiles_retina.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 1280, 512 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 128, 128 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -64, 832, 0, 0, 0, 0, 448, 832, 0, 0, 0, 0, 448, 320, 0, 0, 0, 0, 1984, 320 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 960, -96, 0, 0, 0, 0, 960, 704, 0, 0, 0, 0, 1472, 704, 0, 0, 0, 0, 1472, 1248 )
}

[node name="World" type="Node2D"]
script = ExtResource( 6 )
enemy_path = ExtResource( 7 )
enemy_tank = ExtResource( 8 )
player_scene = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 1, 8, 0, 65536, 9, 0, 65536, 10, 0, 65536, 11, 0, 65536, 12, 0, 0, 13, 0, 0, 14, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 1, 65544, 0, 65536, 65545, 0, 65536, 65546, 0, 65536, 65547, 0, 65536, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 65539, 131076, 0, 2, 131077, 0, 2, 131078, 0, 2, 131079, 0, 65538, 131080, 0, 2, 131081, 0, 2, 131082, 0, 2, 131083, 0, 2, 131084, 0, 2, 131085, 0, 2, 131086, 0, 2, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 1, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 1, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 1, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 1, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 1, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 65541, 327688, 0, 2, 327689, 0, 2, 327690, 0, 2, 327691, 0, 65540, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 393216, 0, 2, 393217, 0, 2, 393218, 0, 2, 393219, 0, 65542, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 1, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 1, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 1, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 8.0

[node name="ShootingEnablerLeft" parent="." instance=ExtResource( 10 )]
position = Vector2( 125, 832.498 )

[node name="ShootingEnablerTop" parent="." instance=ExtResource( 10 )]
position = Vector2( 959.46, 125 )
rotation = 1.5708

[node name="HorizontalRoad" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="VerticalRoad" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 1469.3, 853.375 )

[node name="Tree2" parent="." instance=ExtResource( 4 )]
position = Vector2( 269.726, 437.827 )

[node name="Tree4" parent="." instance=ExtResource( 4 )]
position = Vector2( 96, 608 )

[node name="Tree6" parent="." instance=ExtResource( 4 )]
position = Vector2( 832, 192 )

[node name="Tree9" parent="." instance=ExtResource( 4 )]
position = Vector2( 342.823, 190.427 )

[node name="Tree10" parent="." instance=ExtResource( 4 )]
position = Vector2( 1186.15, 503.4 )

[node name="Crate4" parent="." instance=ExtResource( 1 )]
position = Vector2( 883.834, 727.728 )

[node name="Crate3" parent="." instance=ExtResource( 1 )]
position = Vector2( 546.372, 423.105 )

[node name="Crate2" parent="." instance=ExtResource( 1 )]
position = Vector2( 937.911, 811.077 )

[node name="Crate" parent="." instance=ExtResource( 1 )]
position = Vector2( 1024.83, 805.139 )

[node name="Tree8" parent="." instance=ExtResource( 4 )]
position = Vector2( 671.41, 982.076 )

[node name="SmallTree18" parent="." instance=ExtResource( 9 )]
position = Vector2( 814.459, 1075.1 )

[node name="Crate5" parent="." instance=ExtResource( 1 )]
position = Vector2( 638.256, 416 )

[node name="Crate6" parent="." instance=ExtResource( 1 )]
position = Vector2( 570.205, 493.975 )

[node name="Crate7" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 960 )

[node name="Crate8" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 736 )

[node name="Crate9" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, 928 )

[node name="Tree12" parent="." instance=ExtResource( 4 )]
position = Vector2( 1789.94, 180.332 )

[node name="SmallTree" parent="." instance=ExtResource( 9 )]
position = Vector2( 352, 960 )

[node name="SmallTree2" parent="." instance=ExtResource( 9 )]
position = Vector2( 816.544, 454.856 )

[node name="SmallTree3" parent="." instance=ExtResource( 9 )]
position = Vector2( 581.296, 135.852 )

[node name="SmallTree4" parent="." instance=ExtResource( 9 )]
position = Vector2( 126.492, 290.819 )

[node name="SmallTree5" parent="." instance=ExtResource( 9 )]
position = Vector2( 1312.92, 424.429 )

[node name="Tree13" parent="." instance=ExtResource( 4 )]
position = Vector2( 1243.7, 91.7001 )

[node name="Tree14" parent="." instance=ExtResource( 4 )]
position = Vector2( 1712.62, 929.324 )

[node name="Tree15" parent="." instance=ExtResource( 4 )]
position = Vector2( 690.851, 546.556 )

[node name="Tree17" parent="." instance=ExtResource( 4 )]
position = Vector2( 1780.18, 599.899 )

[node name="Tree19" parent="." instance=ExtResource( 4 )]
position = Vector2( 1324.64, 861.13 )

[node name="SmallTree8" parent="." instance=ExtResource( 9 )]
position = Vector2( 1288.35, 228.3 )

[node name="SmallTree10" parent="." instance=ExtResource( 9 )]
position = Vector2( 1681.45, 98.1499 )

[node name="SmallTree11" parent="." instance=ExtResource( 9 )]
position = Vector2( 1236.66, 978.629 )

[node name="SmallTree12" parent="." instance=ExtResource( 9 )]
position = Vector2( 1580.4, 1047.4 )

[node name="SmallTree13" parent="." instance=ExtResource( 9 )]
position = Vector2( 600.632, 834.897 )

[node name="SmallTree14" parent="." instance=ExtResource( 9 )]
position = Vector2( 1400.13, 91.5946 )

[node name="SmallTree15" parent="." instance=ExtResource( 9 )]
position = Vector2( 1600, 608 )

[node name="SmallTree16" parent="." instance=ExtResource( 9 )]
position = Vector2( 1728, 416 )

[node name="SmallTree17" parent="." instance=ExtResource( 9 )]
position = Vector2( 293.126, 666.376 )

[node name="Tree21" parent="." instance=ExtResource( 4 )]
position = Vector2( 224, 1056 )

[node name="Crate10" parent="." instance=ExtResource( 1 )]
position = Vector2( 1124.3, 232.6 )

[node name="Crate11" parent="." instance=ExtResource( 1 )]
position = Vector2( 1086.18, 159.751 )

[node name="Crate12" parent="." instance=ExtResource( 1 )]
position = Vector2( 864, 64 )

[node name="GUI" parent="." instance=ExtResource( 11 )]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="start_game" from="GUI" to="." method="_on_GUI_start_game"]
